--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Library</title>
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
